    - do not crash if the tarfile can not be read (LP: #203504)
  * fix a bunch of spelling mistakes (LP: #213040), thanks
    to Peter Cordes
  * AutoUpgradeTester/automatic-upgrade-testing:
    - add "--additional-pkgs" argument that can be used to install
      the given packages (seperated with ",") into the VM before 
      the upgrade is performed
  
 --

update-manager (1:0.87.26) hardy-proposed; urgency=low

  * DistUpgrade/DistUpgradeController.py:
    - run in server mode on a server CD (LP: #222895)
    - deal with the landscape.canonical.com repository
      (LP: #224308)
  * DistUpgrade/DistUpradeCache.py:
    - make the code more robust against unavailable
      package records (LP: #223619)
  * DistUpgrade/cdromupgrade:
    - allow passing of arguments (like --mode=server)
      to better support server upgrades with the dvd
      (LP: #222895)
  * po/uk.po:
    - fix translation so that it gets the expected 
      number of arguments (LP: #224294)

 --

update-manager (1:0.87.25) hardy-proposed; urgency=low

  * DistUpgrade/DistUpgradeApport.py:
    - fix typo in log dir (LP: #223743)
  * DistUpgrade/DistUpgradeController.py:
    - if the "Crux" theme is used on dapper during the upgrade, 
      switch to "Human" because Crux is known to crash 
      (LP: #69124)
  * DistUpgrade/DistUpgradeCache.py:
    - do not crash if a meta package is not available in 
      the cache (e.g. xubuntu-desktop that moved from main 
      to universe)
  * DistUpgrade/DistUpgrade.cfg.dapper:
    - fix incorrect xubuntu-desktop detection
  * DistUpgrade/DistUpgradeView.py:
    - make sure that self.confirmChangesMessage is always 
      initialized (LP: #221023)
  * DistUpgrade/mirrors.cfg:
    - added missing russion mirror (LP: #221730)
    - fixed incorrect mirror lines
  * DistUpgrade/DistUpgrade.cfg:
    - better detection to missing dependencies to fix
      ubuntustudio-desktop upgrade problem (LP: #219659)
  * util/demotions.py: