@@ -10,6 +10,11 @@ update-manager (1:0.90.0) intrepid; urgency=low
     - add "--additional-pkgs" argument that can be used to install
       the given packages (seperated with ",") into the VM before 
       the upgrade is performed
+  * DistUpgrade/DistUpgradeConfigParser.py:
+    - write error to log in getListFromFile() if file is not
+      found
+  * DistUpgrade/DistUpgradeCache.py:
+    - fix plural form text (LP: #226695)
   
  --
 
